# CMakeWithLAPACK

./: CMakeLists.txt
.github/workflows/: package.yml
cpp/: main.cpp
